Added new parameter in billboard_faces filter and added default null to billboard_id in billboard_faces table
